SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_EmailPayPending__c/EBizCharge_EmailPayPending__c.object-meta.xml
<CustomObject>
    <label>EBizCharge EmailPayPending</label>
    <nameField>
        <label>EBizCharge EmailPayPending Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBizCharge EmailPayPending</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>