SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_EmailPayPending__c/fields/Payment_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Order_ID__c</fullName>
    <label>Payment Order ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>