SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_EmailPayPending__c/fields/Send_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>Send_Request_Count__c</fullName>
    <label>Send Request Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>